Refactoring and added routing.

--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Swipe test</title>
-
-    <link rel="stylesheet" href="./style.css" />
+    <title>The Politics Test | Put your politics to the test</title>
   </head>
   <body>
     <main id="swiper"></main>
