--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The Politics Test | Put your politics to the test</title>
-    <link rel="icon" type="image/x-icon" href="./tpt_icon.svg" />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="https://www.politicstest.com/s/static/tpt_icon.svg"
+    />
   </head>
   <body>
     <main id="swiper"></main>
